# gex

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GITHUB_DESKTOP_GUIDE.md  LICENSE  QUICK_START.md  README.md  START_HERE.md  TUI_REDESIGN_INDEX.md  install.ps1  install.sh  setup-github.ps1
.github/workflows/: ci.yml  release.yml
src/: error.rs  main.rs
src/cli/: handlers.rs
src/git/: config.rs  executor.rs  mod.rs
src/profile/: manager.rs  mod.rs
src/ssh/: config.rs
src/storage/: mod.rs  service.rs
src/switcher/: mod.rs
src/tui/: app.rs
src/utils/: validator.rs
tests/: integration_test.rs
