[package]
name = "gex"
version = "0.1.0"
edition = "2021"
authors = ["gex contributors"]
description = "Git profile switcher for managing multiple GitHub accounts"
license = "MIT"
repository = "https://github.com/FriezaForce/gex"
homepage = "https://github.com/FriezaForce/gex"
documentation = "https://github.com/FriezaForce/gex"
readme = "README.md"
keywords = ["git", "github", "profile", "ssh", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.10"
ratatui = "0.26"
crossterm = "0.27"
tui-input = "0.8"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
